--- a/templates/partials/group-tab-info.hbs
+++ b/templates/partials/group-tab-info.hbs
@@ -1,6 +1,4 @@
-{{#if isGM}}
-  <div class="form-section" style="margin-bottom: 48px; display:none;">
-    {{{dropZone}}}
-  </div>
-{{/if}}
+<div class="content-header">
+    <h2><i class="fas fa-info-circle"></i> {{ccLocalize "names.information" }}</h2>
+</div>
 {{{richTextDescription}}}
