--- a/templates/codex-toc-quest.hbs
+++ b/templates/codex-toc-quest.hbs
@@ -3,6 +3,7 @@
         <div class="toc-quest-list">
             {{!-- Pinned Quests --}}
             {{#each questsPinned}}
+            {{#if (or this.visible ../isGM)}}
               <div class="toc-quest-item is-collapsed" data-name="{{this.title}}">
               <h4><i class="fas fa-thumbtack" title="Pinned"></i>{{this.title}}
                             {{#if this.completed}}
@@ -21,7 +22,7 @@
                               <h4>Rewards</h4>
                             <ul class="quest-objectives" style="grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));display: grid;">
                               {{#each inventory as |item|}}
-                                    <li>{{item.name}} {{#if ../isGM}}<i class="fas fa-paper-plane" style="cursor: pointer; color: var(--cc-ui);" data-action="sendToPlayer"  data-item-uuid="{{item.itemUuid}}"></i>{{/if}}
+                                    <li>{{item.name}} {{#if ../isGM}}<i class="fas fa-paper-plane" style="cursor: pointer; color: var(--cc-ui);" data-action="sendToPlayer"  data-uuid="{{item.itemUuid}}"></i>{{/if}}
                                     </li>
                               {{/each}}
                             </ul>
@@ -34,7 +35,7 @@
                         {{/if}}
                     </div>
                 </div>
-
+                {{/if}}
             {{/each}}
 
             {{!-- Unpinned Quests (conditionally displayed) --}}
