--- a/templates/partials/group-tab-locations.hbs
+++ b/templates/partials/group-tab-locations.hbs
@@ -1,3 +1,6 @@
+<div class="content-header">
+    <h2><i class="fas fa-map-marker-alt"></i> {{ccLocalize "names.locations" }}</h2>
+</div>
 <div class="locations-grid">
   {{#each locations}}
     {{> "modules/campaign-codex/templates/partials/group-location-card.hbs" location=this}}
