--- a/templates/partials/group-tab-npcs.hbs
+++ b/templates/partials/group-tab-npcs.hbs
@@ -1,8 +1,9 @@
+<div class="content-header">
+    <h2><i class="fas fa-user-tag"></i> {{ccLocalize "names.npcs" }}</h2>
+</div>
 <div class="npc-filters">
   {{#each filters as |filter|}}
-    <button type="button" class="filter-btn refresh-btn {{filter.class}} {{#if filter.active}}active{{/if}}" data-filter="{{filter.dataFilter}}" title="{{filter.title}}">
-        <i class="{{filter.iconClass}}"></i>
-    </button>
+   <i class="{{filter.iconClass}} filter-btn refresh-btn {{filter.class}} {{#if filter.active}}active{{/if}}" data-action="filterButton" data-filter="{{filter.dataFilter}}" title="{{filter.title}}"></i>
   {{/each}}
 </div>
 
