--- a/templates/partials/selected-tab-npcs.hbs
+++ b/templates/partials/selected-tab-npcs.hbs
@@ -1,4 +1,6 @@
-<div class="selected-content-section">
+<div class="content-header">
+    <h2><i class="fas fa-user"></i> {{#if labelOverride}}{{labelOverride}}{{else}}{{ccLocalize "names.npcs" }}{{/if}}</h2>
+</div>
   {{#if isGM}}
     <div class="selected-actions">
       {{{dropToMapBtn}}}
@@ -25,7 +27,4 @@
         </div>
       </div>
     {{/if}}
-  {{else}}
-    <p><em>No NPCs linked.</em></p>
   {{/if}}
-</div>
